New modifications to the portfolio.

--- a/about.html
+++ b/about.html
@@ -31,18 +31,18 @@
 
 <body>
 
-  
+
 <nav class="navbar navbar-default navbar-expand-lg navbar-light light">
-  <a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav m-auto">
       <li class="nav-item active">
         <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
           Projects</span>
         </a>
@@ -52,6 +52,9 @@
           <a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
 		  <a class="dropdown-item" href="mobileapp.html">B-AID</a>
         </div>
+      </li> -->
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">Projects</span></a>
       </li>
 	   <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">Resume</span></a>
@@ -63,8 +66,11 @@
   <!-- ======= Hero Section ======= -->
   <section id="about-page" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
+
       <h1 align="center"><b>About me</b></h1>
-      
+      <div class="rectangle4 shape2"></div>
+      <div class="rectangle6 shape2"></div>
+
     </div>
   </section><!-- End Hero -->
 
@@ -77,7 +83,7 @@
 
         <div class="section-title">
           <p class ="justified">
-		  I am Anirudh Nagraj, a keen eyed UX guy. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product. </p>
+		  I am Anirudh Nagraj, an interaction designer with a passion for user experience like none other. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product. </p>
         </div>
 
         <div class="row">
@@ -87,9 +93,9 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> What sets me apart?</h3>
             <p class="justified">
-              By leveraging user research techniques to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the product's value at hand. Through strategizing and working on the insights generated, I am sure that the users will have a positive user experience. Having worked in software development in UI/UX, I know what it means to wear the developer's hat while designing a product. Many people might argue, a good product needs user research before development. For me, user research is quintessential in every step of the product life cycle. I like to work with multiple methods to triangulate findings, backing up qualitative data with quantitative and vice-versa. The method used in the research is dependent on the requirements of business, stakeholders, and the users. 
+              By leveraging user research techniques to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the product's value at hand. Through strategizing and working on the insights generated, I am sure that the users will have a positive user experience. Having worked in software development in UI/UX, I know what it means to wear the developer's hat while designing a product. Many people might argue, a good product needs user research before development. For me, user research is quintessential in every step of the product life cycle. I like to work with multiple methods to triangulate findings, backing up qualitative data with quantitative and vice-versa. The method used in the research is dependent on the requirements of business, stakeholders, and the users.
             </p>
-			
+
             <h3> Other Interests</h3>
 			<p class="justified">I am an avid soccer fan, coffee lover and an admirer of nature. When idle, books offer a place of solace for me.  Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time.
 			</p>
@@ -116,7 +122,7 @@
 		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
       <div class="copyright">
-        <strong><span>Curated with a lot of thought and passion</span></strong>.
+        <strong><span>Curated with a lot of thought and passion by Anirudh.</span></strong>.
       </div>
     </div>
   </footer><!-- End Footer -->
