--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -48,19 +48,22 @@
 
 </header> -->
 <nav class="navbar navbar-default navbar-expand-lg navbar-light light">
-	<a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
+
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarText">
-		<ul class="navbar-nav ml-auto">
+		<ul class="navbar-nav m-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="index.html"><span class="navcolor">Home</span> <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="navcolor">About</span></a>
+				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
 			</li>
-			<li class="nav-item dropdown">
+			<li class="nav-item active">
+				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
+			</li>
+			<!--<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="navcolor">
 					Projects</span>
 				</a>
@@ -69,9 +72,9 @@
 					<a class="dropdown-item" href="coeit-ssc.html">Shared Servies Center</a>
 					<a class="dropdown-item" href="mobileapp.html">B-AID</a>
 				</div>
-			</li>
+			</li> -->
 			<li class="nav-item active">
-				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">Resume</span></a>
+				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
 			</li>
 		</ul>
 	</div>
@@ -81,6 +84,9 @@
 	<!-- ======= Portfolio Details ======= -->
 	<section id="hero-page" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
+			<div class="rectangle1 shape2"></div>
+			<div class="rectangle2 shape2"></div>
+			<div class="rectangle3 shape2"></div>
 			<h1>Navigational Aid for runners who are blind - TRIDENT</h1>
 		</div>
 
@@ -116,8 +122,7 @@
 </div>
 </div>
 
-<div class="triangle shape2"></div>
-<div class="triangle2 shape2"></div>
+
 <div class="container">
 	<h6 class ="uppermargin textbackground"><strong>MY ROLE</strong></h6>
 	<p class="justified"> As the lead user researcher, I successfully helped build the prototype to aid blind runners leading the team in research related activities.</span> </p>
@@ -162,6 +167,8 @@
 					</div>
 				</div>
 
+				<div class="triangle5 shape2"></div>
+				<div class="triangle7 shape2"></div>
 
 				<h5 class="textbackground uppermargin"><strong>RESEARCH ISSUES</strong></h5>
 				<p class="justified tabspacing">While there is a lot of buzz in the market related to accessibility related products with respect to individuals who are blind, there is hardly any device that pops up when specific to running and obstacle detection.</span></p>
@@ -252,7 +259,7 @@
 												</div>
 											<div class="row uppermargin">
 												<div class="col-md-6">
-													<p class="textbackground2"><strong>STRENGTHS</strong>
+													<p class="textbackground3"><strong>STRENGTHS</strong>
 														<ul class="text-aria">
 															<li>
 																The BuzzClip is a portable device with a single sensor that is extremely Portable.
@@ -265,7 +272,7 @@
 															</li>
 														</ul></p>
 
-														<p class="uppermargin textbackground2"><strong>WEAKNESSES</strong></p>
+														<p class="uppermargin textbackground3"><strong>WEAKNESS</strong></p>
 														<ul class="text-aria">
 															<li>
 																High learnability curve among some of the devices present ensures hardships among the users.
@@ -283,7 +290,7 @@
 												</div>
 
 											<div class="col-md-6 border-left">
-												<p class="textbackground2"><strong>OPPORTUNITIES</strong></p>
+												<p class="textbackground3"><strong>OPPORTUNITIES</strong></p>
 												<ul class="text-aria">
 													<li>
 														Expanding the usage from normal walkin to other  activities.
@@ -299,7 +306,7 @@
 													</li>
 												</ul></p>
 
-												<p class="textbackground2 uppermargin"><Strong>THREATS</Strong></p>
+												<p class="textbackground3 uppermargin"><Strong>THREATS</Strong></p>
 												<ul class="text-aria">
 													<li>
 														Increased number of competitors in the market.
@@ -589,16 +596,9 @@
 										<!-- ======= Footer ======= -->
 										<footer id="footer">
 											<div class="container">
-												<h3>Anirudh Nagraj</h3>
-												<p>Come say a hi! 👋</p>
-												<div class="social-links">
-													<a href="https://twitter.com/Anirudh_Nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
-													<a href="https://www.instagram.com/anirudh.nagraj/" class="instagram"><i class="bx bxl-instagram"></i></a>
-													<a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-													<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
-												</div>
+
 												<div class="copyright">
-													<strong><span>Curated with a lot of thought and passion </span></strong>.
+													<strong><span>Built with a lot of thought and passion by Anirudh</span></strong>.
 												</div>
 											</div>
 										</footer><!-- End Footer -->
