--- a/coeit-research.html
+++ b/coeit-research.html
@@ -48,20 +48,24 @@
 
 </header> -->
 <nav class="navbar navbar-default navbar-expand-lg navbar-light light">
-	<a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
+
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarText">
-		<ul class="navbar-nav ml-auto">
+		<ul class="navbar-nav m-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="index.html"><span class="navcolor">Home</span> <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="navcolor">About</span></a>
+				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
 			</li>
+      <li class="nav-item active">
+				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
+			</li>
+      <!--
 			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="navcolor">
+				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
 					Projects</span>
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -69,9 +73,9 @@
 					<a class="dropdown-item" href="coeit-ssc.html">Shared Servies Center</a>
 					<a class="dropdown-item" href="mobileapp.html">B-AID</a>
 				</div>
-			</li>
+			</li> -->
 			<li class="nav-item active">
-				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">Resume</span></a>
+				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
 			</li>
 		</ul>
 	</div>
@@ -81,7 +85,11 @@
 	<!-- ======= Portfolio Details ======= -->
 	<section id="hero-page3" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-			<h1>College of Engineering and Information Technology's Research Website</h1>
+      <div class="rectangle1 shape2"></div>
+      <div class="rectangle2 shape2"></div>
+      <div class="rectangle3 shape2"></div>
+      <h1>College of Engineering and Information Technology's Research Website</h1>
+
 		</div>
 
 	</div>
@@ -107,8 +115,6 @@
 </div>
 </div>
 
-<div class="triangle shape2"></div>
-<div class="triangle2 shape2"></div>
 <div class="container">
   <div class="row">
     <div class="col-md-8">
@@ -229,7 +235,9 @@
 									</div>
 
 									<!-- Literature Survey End -->
-
+                  <div class="triangle7 shape2"></div>
+                  <div class="triangle6 shape2"></div>
+                  <div class="triangle5 shape2"></div>
                   <h2 class="uppermargin" align="center"><b>Analysis - Behavioral + Attitudinal</b></h4>
                     <div class="container">
                   <p>
@@ -521,16 +529,9 @@
 										<!-- ======= Footer ======= -->
 										<footer id="footer">
 											<div class="container">
-												<h3>Anirudh Nagraj</h3>
-												<p>Come say a hi! 👋</p>
-												<div class="social-links">
-													<a href="https://twitter.com/Anirudh_Nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
-													<a href="https://www.instagram.com/anirudh.nagraj/" class="instagram"><i class="bx bxl-instagram"></i></a>
-													<a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-													<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
-												</div>
+
 												<div class="copyright">
-													<strong><span>Curated with a lot of thought and passion </span></strong>.
+													<strong><span>Built with a lot of thought and passion by Anirudh</span></strong>.
 												</div>
 											</div>
 										</footer><!-- End Footer -->
