--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 <body>
 
   <nav class="navbar navbar-default1 navbar-expand-lg navbar-light light">
-    <a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav m-auto justify-content-center">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="about.html"><span class="whitecolor">About</span></a>
+          <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
         </li>
 
         <li class="nav-item active">
-          <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">Resume</span></a>
+          <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
         </li>
       </ul>
     </div>
@@ -62,16 +62,22 @@
         <div class="col-md-8">
           <h2><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
 
-          <div class="triangle5 shape2"></div>
-          <div class="triangle6 shape2"></div>
-          <div class="triangle7 shape2"></div>
-          <h3 class="textbackground"><b>Welcome to my portfolio!</b></h3>
+          <div class="rectangle1 shape2"></div>
+          <div class="rectangle2 shape2"></div>
+          <div class="rectangle3 shape2"></div>
+          <h3 class="textbackground2"><b>Welcome to my portfolio!</b></h3>
 
           <p>I'm an interaction designer who helps build better products, bringing customers and businesses closer to one another.</p>
         </div>
         <div class="col-md-3">
-          <img src="assets/img/Personal/Ani_New.jpg" class="avatar8" style="border-radius:100%"  alt="">
+          <img src="assets/img/Personal/Ani_New.jpg" class="img-fluid" style="border-radius:100%"  alt="">
         </div>
+      </div>
+      <div class="social-links">
+        <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -81,10 +87,7 @@
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
-
-        <div class="section-title">
-          <h2>Projects</h2>
-          <p></b> View some of my projects below.</p>
+          <h1 class="uppermargin project-title"><b>My Projects</b></h1>
         </div>
 
         <div class="row">
@@ -105,64 +108,50 @@
 
 
               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <div class="icon-box iconbox-blue"><a href="navigational-aid.html">
-                  <div class="icon">
-                    <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                      <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,582.0697525312426C382.5290701553225,586.8405444964366,449.9789794690241,525.3245884688669,502.5850820975895,461.55621195738473C556.606425686781,396.0723002908107,615.8543463187945,314.28637112970534,586.6730223649479,234.56875336149918C558.9533121215079,158.8439757836574,454.9685369536778,164.00468322053177,381.49747125262974,130.76875717737553C312.15926192815925,99.40240125094834,248.97055460311594,18.661163978235184,179.8680185752513,50.54337015887873C110.5421016452524,82.52863877960104,119.82277516462835,180.83849132639028,109.12597500060166,256.43424936330496C100.08760227029461,320.3096726198365,92.17705696193138,384.0621239912766,124.79988738764834,439.7174275375508C164.83382741302287,508.01625554203684,220.96474134820875,577.5009287672846,300,582.0697525312426"></path>
-                    </svg>
-                    <i class='bx bx-braille'></i>
-                  </div>
-                  <h4 class="hover">TRIDENT</a></h4>
+                <div class="icon-box iconbox-blue">
+                  <img src="assets/img/Personal/Prototype_main.jpeg" class="avatar4" alt="">
+                  <h4>TRIDENT</h4>
                   <p>A navigational wearable aid for runners who are blind</p>
+                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'"> View Work </a></button></div>
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                <div class="icon-box iconbox-orange"><a href="coeit-research.html">
+                <div class="icon-box iconbox-orange">
                   <div class="icon">
-                    <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                      <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
-                    </svg>
-                    <i class='bx bx-sitemap'></i>
+                    <img src="assets/img/Personal/UMBC.png" class="img-fluid" alt="">
                   </div>
-                  <h4 class="hover" >COEIT Research</a></h4>
+                  <h4 class="uppermargin">COEIT Research</h4>
                   <p>User research project of the univeristy's College of Engineering and Information Technology's RESEARCH website.</p>
+                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> View Work </a></button> </div>
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                <div class="icon-box iconbox-pink"><a href="coeit-ssc.html">
+                <div class="icon-box iconbox-pink">
                   <div class="icon">
-                    <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                      <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"></path>
-                    </svg>
-                    <i class='bx bx-analyse'></i>
+                    <img src="assets/img/Personal/UMBC.png" class="img-fluid" alt="">
                   </div>
-                  <h4 class="hover" >Shared Services Center</a></h4>
+                  <h4 class="uppermargin">Shared Services Center</h4>
                   <p>User research project of the SHARED SERVICES CENTER (Payroll and Finances) website.</p>
+                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'"> View Work </a></button> </div>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 portfolio-item filter-app filter-card">
-                <div class="icon-box iconbox-yellow"><a href="mobileapp.html">
-                  <div class="icon">
-                    <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                      <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>
-                    </svg>
-                    <i class='bx bx-mobile-vibration'></i>
-                  </div>
-                  <h4 class="hover">B-AID</a></h4>
+                <div class="icon-box iconbox-yellow">
+                  <img src="assets/img/Personal/appdc.png" class="avatar4" alt="">
+                  <h4>B-AID</h4>
                   <p>A mobile application prototype for individuals who are visually impaired.</p>
+                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> View Work </a></button> </div>
                 </div>
               </div>
 
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <div class="icon-box iconbox-teal"><a href="thesis.html">
-                  <div class="icon">
-                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64.34 55.97"><defs><style>.cls-1{fill:#f3f4f4;}</style></defs><path class="cls-1" d="M241.36,45.45c4.55-11.35,21.08-16.05,31.8-16.19,4-.05,14.26-.18,17.92,5.78.84,1.37,1.33,4.38,2.31,10.41.95,5.83.8,7.84.58,9.24a20.7,20.7,0,0,1-2.89,7.52c-8.17,13.92-7.33,16.23-10.41,19.07-12.87,11.87-51.8-6.08-50.87-14.45.24-2.14,2.92-2.22,6.36-6.93C240.32,54.2,239.5,50.1,241.36,45.45Z" transform="translate(-229.79 -29.25)"/></svg>
-                    <i class='bx bxs-book-content'></i>
-                  </div>
-                  <h4 class="hover">Master's Thesis</a></h4>
+              <div class="col-lg-4 col-md-4 portfolio-item filter-app">
+                <div class="icon-box iconbox-teal">
+                      <img src="assets/img/Personal/WC.jpg" class="avatar4" alt="">
+                  <h4 class="hover">Master's Thesis</h4>
                   <p>Investigating the navigational habits of individuals who are blind in India.</p>
+                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='thesis.html'"> View Thesis </a></button> </div>
                 </div>
               </div>
             </div>
@@ -226,16 +215,8 @@
 <!-- ======= Footer ======= -->
 <footer id="footer">
   <div class="container">
-    <h3>Anirudh Nagraj</h3>
-    <p>Come say a hi! 👋</p>
-    <div class="social-links">
-      <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
-      <a href="https://www.instagram.com/anirudh.nagraj/" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      <a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
-    </div>
     <div class="copyright">
-      <strong><span>Curated with a lot of thought and passion </span></strong>.
+      <strong><span>Built with a lot of thought and passion by Anirudh</span></strong>.
     </div>
   </div>
 </footer><!-- End Footer -->
