--- a/mobileapp.html
+++ b/mobileapp.html
@@ -37,19 +37,23 @@
 
 	<body>
 		<nav class="navbar navbar-default navbar-expand-lg navbar-light light">
-			<a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
+
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarText">
-				<ul class="navbar-nav ml-auto">
+				<ul class="navbar-nav m-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="about.html"><span class="whitecolor">About</span></a>
+						<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
 					</li>
-					<li class="nav-item dropdown">
+
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECT</span></a>
+					</li>
+					<!-- <li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
 							Projects</span>
 						</a>
@@ -58,7 +62,7 @@
 							<a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
 							<a class="dropdown-item" href="coeit-ssc.html">Shared Services Center</a>
 						</div>
-					</li>
+					</li> -->
 					<li class="nav-item active">
 						<a class="nav-link" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">Resume</span></a>
 					</li>
@@ -70,6 +74,9 @@
 
 			<section id="hero-page2" class="d-flex flex-column justify-content-center">
 				<div class="container" data-aos="zoom-in" data-aos-delay="100">
+					<div class="rectangle1 shape2"></div>
+					<div class="rectangle2 shape2"></div>
+					<div class="rectangle3 shape2"></div>
 					<h1>B-AID : An assistive mobile application for individuals who are blind</h1>
 				</div>
 			</section>
