Major changes to the mobile application page.

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav m-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -54,10 +54,10 @@
         </div>
       </li> -->
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">Projects</span></a>
+        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
       </li>
 	   <li class="nav-item active">
-        <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">Resume</span></a>
+        <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">RESUME</span></a>
       </li>
     </ul>
   </div>
