--- a/coeit-research.html
+++ b/coeit-research.html
@@ -57,9 +57,6 @@
 			<li class="nav-item active">
 				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
-			</li>
       <li class="nav-item active">
 				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
 			</li>
@@ -74,6 +71,10 @@
 					<a class="dropdown-item" href="mobileapp.html">B-AID</a>
 				</div>
 			</li> -->
+
+			<li class="nav-item active">
+				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
+			</li>
 			<li class="nav-item active">
 				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
 			</li>
@@ -374,7 +375,7 @@
 										<div class ="container">
 											<p class="justified">
 												<span class = "text-aria"> </p>
-													<h2 class="uppermargin" align="center"><b>Peronas to generate empathy and profile the target audience</b></h4>
+													<h2 class="uppermargin" align="center"><b>Personas to profile the target audience, and understand the user base.</b></h4>
                       </div>
                       <div class="triangle5 shape2"></div>
                       <div class="triangle6 shape2"></div>
