--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -48,7 +48,7 @@
         <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">ABOUT</span></a>
+        <a class="nav-link" href="index.html#about"><span class="whitecolor">ABOUT ME</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
