--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
+          <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
         </li>
 
         <li class="nav-item active">
