--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -58,9 +58,6 @@
 				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
-			</li>
-			<li class="nav-item active">
 				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
 			</li>
 			<!--<li class="nav-item dropdown">
@@ -73,6 +70,10 @@
 					<a class="dropdown-item" href="mobileapp.html">B-AID</a>
 				</div>
 			</li> -->
+
+			<li class="nav-item active">
+				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
+			</li>
 			<li class="nav-item active">
 				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
 			</li>
