--- a/mobileapp.html
+++ b/mobileapp.html
@@ -72,7 +72,7 @@
 			</li> -->
 
 			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT Me</span></a>
+				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
 			</li>
 			<li class="nav-item active">
 				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
@@ -139,8 +139,6 @@
 
 
 
-				<div class="triangle5 shape2"></div>
-				<div class="triangle7 shape2"></div>
 
 				<h5 class="textbackground uppermargin"><strong>RESEARCH ISSUES</strong></h5>
 				<p class="justified tabspacing">Although there are numerous mobile applications to aid individuals who are blind, there is no single application in the market that encapsulates all the functions.</span></p>
@@ -156,6 +154,8 @@
 			</div>
 
 
+							<div class="triangle5 shape2"></div>
+							<div class="triangle7 shape2"></div>
 			<section>
 				<div class="container">
 					<div>
