--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
   <section id="about-page" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-      <h1 align="center"><b>About me</b></h1>
+      <h1 align="center"><b>Hello Again! 👋🏽</b></h1>
       <div class="rectangle4 shape2"></div>
       <div class="rectangle6 shape2"></div>
 
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <p class ="justified">
-		  I am Anirudh Nagraj, an interaction designer with a passion for user experience like none other. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product. </p>
+		  I am Anirudh Nagraj, an interaction designer with a passion for user experience like none other. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product.</p>
         </div>
 
         <div class="row">
@@ -113,16 +113,9 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Anirudh Nagraj</h3>
-      <p>Come say a hi! 👋</p>
-      <div class="social-links">
-        <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
       <div class="copyright">
-        <strong><span>Curated with a lot of thought and passion by Anirudh.</span></strong>.
+        <strong><span>Built with a lot of thought and passion by Anirudh.</span></strong>
       </div>
     </div>
   </footer><!-- End Footer -->
