--- a/coeit-research.html
+++ b/coeit-research.html
@@ -96,34 +96,39 @@
 	</div>
 </section><!-- End Portfolio Details -->
 
+<div class="introduction">
 
 <div class="container uppermargin">
 	<div class="row">
 		<div class="col-md-8">
+			<h4><strong>BACKGROUND</strong></h4>
 			<p class="justified">
-				  Our client, the College of Engineering and Information technology (COEIT) highlighted some problems in their research website. The issues stem from the decreased usability and user reach in the website. Our team decided to employ user research and help improve the usability of the website focussing on the base requirements of increased usability and improved traffic on the website. <b>The website serves as an information hub </b> into the various dimensions, ranging from the departments, faculty to the myriad of projects. The COEIT prides itself on the excellent research that is conducted in the labs of the various departments. (For example, the Interactive Systems Research Center (ISRC)), fostering a collaborative environment. Hence, we incorporated evaluative research and helped redesign the website for better user retention and increase the average time the users spend on the website. </p>
+				  Our client, the College of Engineering and Information technology (COEIT) highlighted some problems in their research website. The issues stem from the decreased usability and user reach in the website. We decided to employ user research and help improve the usability of the website focussing on the base requirements of increased usability and improved traffic on the website.</p>
+					<p class="justified"><b>The website serves as an information hub </b> into the various dimensions, ranging from the departments, faculty to the myriad of projects. The COEIT prides itself on the excellent research that is conducted in the labs of the various departments. (For example, the Interactive Systems Research Center (ISRC)), fostering a collaborative environment. Hence, we incorporated evaluative research and helped redesign the website for better user retention and increase the average time the users spend on the website. </p>
 
 
 		</div>
-		<div class="col-md-3 offset-1 "><h5><strong>Team Members</strong>:</h5><span class="text-aria"><p>
+		<div class="col-md-3 offset-1 "><h4><strong>TEAM MEMBERS</strong></h4><span class="text-aria"><p>
 			Anirudh Nagraj (UX Researcher, UX Designer)
 		</p>
 		<p>
 			Hirak Ray (UX Researcher, UX Designer)
 		</p>
 		</span>
+		<h4 class ="uppermargin"><strong>MY ROLE</strong></h4>
+		<p class="text-aria"> User researcher responsible for conducting qualitative studies and help improve the usability of the existing product by providing recommendations. </span> </p>
 	</div>
+</div>
 </div>
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-md-8">
-      <h6 class ="uppermargin textbackground"><strong>MY ROLE</strong></h6>
-    	<p class="justified"> User researcher responsible for conducting qualitative studies and help improve the usability of the existing product by providing recommendations. </span> </p>
 
-    	<h6 class="uppermargin textbackground"><strong>IMPACT</strong></h6>
-    	<p class="justified portfolio-padding">We showed that the proposed changes would lead to <b> greater user retention leading to more time being spent on the website </b>. Efficient navigation throughout the website leading to lesser bouncing and exiting by the users. <b> Better internal structure and content structure </b> to better aid user experience .  The efficiency of using the redesign was found to be higher than the original website (based on timed activities). The post questionnaire results show that most participants found the <b>information displayed on the redesign easier to find and easier to read.</b> Furthermore, the feedback button was also easier to identify in the redesign. However, there were a few negative comments about the hover feature of the redesign’s feedback button which may impact visibility. Also, the color scheme implemented had mixed reviews from participants. Some liked that the redesign’s color scheme matched UMBC’s theme, others felt that the change may be too jarring for returning users.
+
+    	<h5 class="uppermargin textbackground"><strong>IMPACT</strong></h5>
+    	<p class="justified portfolio-padding">We showed that the proposed changes would lead to <b><mark>greater user retention leading to more time being spent on the website</mark>  </b>. Efficient navigation throughout the website leading to lesser bouncing and exiting by the users. <b> Better internal structure and content structure </b> to better aid user experience .  The efficiency of using the redesign was found to be higher than the original website (based on timed activities). The post questionnaire results show that most participants found the <b>information displayed on the redesign easier to find and easier to read.</b> Furthermore, the feedback button was also easier to identify in the redesign. However, there were a few negative comments about the hover feature of the redesign’s feedback button which may impact visibility. Also, the color scheme implemented had mixed reviews from participants. Some liked that the redesign’s color scheme matched UMBC’s theme, others felt that the change may be too jarring for returning users.
     </div>
     <div class="col-md-3 offset-1  uppermargin">
       <img src="assets/img/Personal/COEIT.png" class="img-fluid" alt="">
