--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <div class="icon-box iconbox-blue">
-                  <img src="assets/img/Personal/Prototype_main.jpeg" class="avatar4" alt="">
+                  <img src="assets/img/Personal/prototype_color.png" class="img-fluid" alt="">
                   <h4>TRIDENT</h4>
                   <p>A navigational wearable aid for runners who are blind</p>
                   <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'"> View Work </a></button></div>
