--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -99,13 +99,13 @@
 			<p class="justified">
 				<h3><b>What's this about?</b></h3>
 				<p class=" justified paragraph">
-					<b class="textbackground3"> I worked on an industry funded study to assess the manner in which blind users interact with technology while running. </b>  The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run.
+					<b class="textbackground3"> An industry funded study to assess the manner in which blind users interact with technology while running. </b>  The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run.
 
 				</p>
 			</p>
 
 			<h3 class ="uppermargin"><strong>My Role </strong></h3>
-			<p class="justified paragraph">  This project was done in collaboration with <b class="textbackground3">TOYOTA.</b> This was a two year project. It included an overall team of 5 people, cutting across diversities, comprising of Designers, HCI Researchers, and a Faculty as the chief investigator. <b class="textbackground">As the lead user researcher</b>, I successfully helped build the prototype to aid blind runners leading the student team in research related activities.</p>
+			<p class="justified paragraph">  This project was done in collaboration with <b class="textbackground3">TOYOTA.</b> This was a two year project. It included an overall team of 5 people, cutting across diversities, comprising of Designers, HCI Researchers, and a Faculty as the chief investigator. <b class="textbackground3">As the lead user researcher</b>, I successfully helped build the prototype to aid blind runners leading the student team in research related activities.</p>
 
 		<h3 class="uppermargin"><strong>Outcome</strong></h3>
 		<p class="justified paragraph"> As a team, we prioritized user research and narrowed down on the type of device that can fit the users' needs.</p>
@@ -411,13 +411,13 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 							<p class="justified paragraph">This <b class="textbackground3">low cost device </b>consists of a variety of sensors to offer a wider detection range. </p>
 							<p class="justified paragraph">The output works on haptics and can be used by Deaf and Hard of hearing people as well.</p>
 
-							<p class="justified paragraph">The users do not have to spend money on devices that are expensive and bear only one sensor as this <b> prototype is a handy alternative </b>. </p>
+							<p class="justified paragraph">The users do not have to spend money on devices that are expensive and bear only one sensor as this <b class="textbackground3"> prototype is a handy alternative </b>. </p>
 
 							<p class="justified paragraph">We anticipate that people in Low-and Middle income countries would be able to afford the device should it hit the market. </p>
 
-						<p class="justified paragraph">This device can be used for <b> regular walking as well, extending from the runners </b>. </p>
+						<p class="justified paragraph">This device can be used for <b class="textbackground3"> regular walking as well, extending from the runners </b>. </p>
 
-						<p class="justified paragraph">	We have made this belt as <b> non-intrusive </b> as possible. Majority of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available.</p>
+						<p class="justified paragraph">	We have made this belt <b class="textbackground3"> non-intrusive </b> as possible. Majority of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available.</p>
 						</div>
 
 						<div class="container">
