--- a/about.html
+++ b/about.html
@@ -81,24 +81,41 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <p class ="justified">
-		  I am Anirudh Nagraj, an interaction designer with a passion for user experience like none other. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product.</p>
-        </div>
 
-        <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/Personal/Main Image 2.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3> What sets me apart?</h3>
-            <p class="justified">
-              By leveraging user research techniques to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the product's value at hand. Through strategizing and working on the insights generated, I am sure that the users will have a positive user experience. Having worked in software development in UI/UX, I know what it means to wear the developer's hat while designing a product. Many people might argue, a good product needs user research before development. For me, user research is quintessential in every step of the product life cycle. I like to work with multiple methods to triangulate findings, backing up qualitative data with quantitative and vice-versa. The method used in the research is dependent on the requirements of business, stakeholders, and the users.
-            </p>
+          <p class ="justified paragraph">
+		  Glad you stopped by! I am Anirudh - a soccer loving, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) to build better products</p>
 
-            <h3> Other Interests</h3>
-			<p class="justified">I am an avid soccer fan, coffee lover and an admirer of nature. When idle, books offer a place of solace for me.  Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time.
-			</p>
+
+
+            <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="">
+
+
+            <p class="justified paragraph">
+              <h3> Me in a nutshell..</h3>
+              <p class="justified paragraph">
+              You know? I've been fortunate enough to be of help to people who need assistance my entire life (My mother is physically challenged). My aim is has always been to make things as easy as possible and create good experiences to many a people. This drive only increased when I joined the University of Maryland, Baltimore County as a Human-Centered Computing graduate. (Let's Go Retrievers!). As a HCI research assistant, working on accessibility projects has taught me loads of research methods, and more importantly to put empathy at the forefront while not losing sight of my passion. Under the supervision of Dr.Ravi Kuber, two papers have been submitted to The International ACM SIGACCESS Conference on Computers and Accessibility  .
+             </p>
+
+              <p class="justified paragraph"> Apart from the role of a HCI researcher, I worked as a UX Researcher with Shared Services team of the university employing my learning as a researcher along with quantitative research to revamp their current website design.
+              </p>
+
+              <p class="justified paragraph"> Back before my master's journey started, I worked as a Software Engineer in UI/UX with L & T Infotech back in Bangalore, India. I know what it means to wear the developer's hat while designing a product, and the sweetness of interacting with peers while plying my trade in a cross-functional setup. </p>
+
+              <h3 class ="uppermargin3" > Me and UX</h3>
+              <p class="justified paragraph">
+              By leveraging user research techniques (Interviews, Contextual Inquiries, Personas, etc.,) to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the product's value at hand. I like to work with multiple methods to triangulate findings, backing up qualitative data with quantitative and vice-versa. The method used in the research is dependent on the requirements of business, stakeholders, and the users. P.S I am also a huge fan of Web Accessibility! :) </p>
+
+            <h3 class="uppermargin"> Other things you may want to know about me</h3>
+            <div class="row">
+              <div class="col-md-6">
+                <p class="justified paragraph">When idle, books offer a place of solace. I love reading about mythology, and modern history. I am always on the lookout for books written to view multiple perspectives. </p>
+                  <p class="justified paragraph">Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time. My proudest moment while travelled came when I scaled a Himalayan peak, Kedarkantha. 12,500 ft feet above sea level.  </p>
+              </div>
+              <div class="col-md-4 offset-1">
+                <img src="assets/img/Personal/Main Image 3.png" class="img-fluid" alt="">
+              </div>
+            </div>
+
           </div>
         </div>
 
