--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
 
           <p class ="justified paragraph">
-		  Glad you stopped by! I am Anirudh - a soccer loving, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) to build better products</p>
+		  Glad you stopped by! I am Anirudh - a soccer loving, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) to build better products.</p>
 
 
 
@@ -93,33 +93,38 @@
             <p class="justified paragraph">
               <h3> Me in a nutshell..</h3>
               <p class="justified paragraph">
-              You know? I've been fortunate enough to be of help to people who need assistance my entire life (My mother is physically challenged). My aim is has always been to make things as easy as possible and create good experiences to many a people. This drive only increased when I joined the University of Maryland, Baltimore County as a Human-Centered Computing graduate. (Let's Go Retrievers!). As a HCI research assistant, working on accessibility projects has taught me loads of research methods, and more importantly to put empathy at the forefront while not losing sight of my passion. Under the supervision of Dr.Ravi Kuber, two papers have been submitted to The International ACM SIGACCESS Conference on Computers and Accessibility  .
+              Do you know? I've been fortunate enough to help people who need assistance my entire life (My mother is physically challenged). My aim has always been to make things as easy as possible and create good experiences for many people. This drive only increased when I joined the University of Maryland, Baltimore County as a Human-Centered Computing graduate. (Let's Go Retrievers!). As an HCI research assistant, working on accessibility projects has taught me loads of research methods, and more importantly, to put empathy at the forefront while not losing sight of my passion. Under the supervision of Dr.Ravi Kuber, two papers have been submitted to The International ACM SIGACCESS Conference on Computers and Accessibility.
              </p>
 
-              <p class="justified paragraph"> Apart from the role of a HCI researcher, I worked as a UX Researcher with Shared Services team of the university employing my learning as a researcher along with quantitative research to revamp their current website design.
+              <p class="justified paragraph"> Apart from the role of an HCI researcher, I worked as a UX Researcher with the Shared Services team of the university, employing my learning as a researcher along with quantitative research to revamp their current website design.
               </p>
 
-              <p class="justified paragraph"> Back before my master's journey started, I worked as a Software Engineer in UI/UX with L & T Infotech back in Bangalore, India. I know what it means to wear the developer's hat while designing a product, and the sweetness of interacting with peers while plying my trade in a cross-functional setup. </p>
+              <p class="justified paragraph"> Before my master's journey began, I worked as a Software Engineer in UI/UX with L & T Infotech back in Bangalore, India. I know what it means to wear the developer's hat while designing a product and the sweetness of interacting with peers while plying my trade in a cross-functional setup. </p>
 
               <h3 class ="uppermargin3" > Me and UX</h3>
               <p class="justified paragraph">
-              By leveraging user research techniques (Interviews, Contextual Inquiries, Personas, etc.,) to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the product's value at hand. I like to work with multiple methods to triangulate findings, backing up qualitative data with quantitative and vice-versa. The method used in the research is dependent on the requirements of business, stakeholders, and the users. P.S I am also a huge fan of Web Accessibility! :) </p>
+             By leveraging user research techniques (Interviews, Contextual Inquiries, Personas, etc.) to get into the minds of the users businesses serve, I help identify the clients' needs, stakeholders (users) and look to increase the product's value at hand. I like to work with multiple methods to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. P.S I am also a huge fan of Web Accessibility! :) </p>
 
-            <h3 class="uppermargin"> Other things you may want to know about me</h3>
+            <h3 class="uppermargin"> Other things you may want to know about me..</h3>
             <div class="row">
               <div class="col-md-6">
-                <p class="justified paragraph">When idle, books offer a place of solace. I love reading about mythology, and modern history. I am always on the lookout for books written to view multiple perspectives. </p>
-                  <p class="justified paragraph">Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time. My proudest moment while travelled came when I scaled a Himalayan peak, Kedarkantha. 12,500 ft feet above sea level.  </p>
+                <p class="justified paragraph">When idle, books offer a place of solace. I love reading about mythology and modern history. I am always on the lookout for books written to view multiple perspectives. </p>
+                  <p class="justified paragraph">Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time. My proudest moment while traveling came when I scaled a Himalayan peak, Kedarkantha. 12,500 ft feet above sea level.  </p>
               </div>
               <div class="col-md-4 offset-1">
                 <img src="assets/img/Personal/Main Image 3.png" class="img-fluid" alt="">
               </div>
             </div>
+            <h3 class="uppermargin" align="center"><strong>Want to get in touch? Let's chat!</strong></h3>
+            <div class="social-links">
+              <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
+            </div>
 
           </div>
-        </div>
 
-      </div>
     </section><!-- End About Section -->
 
 
